Fixed highlight not following the current playlist after a playlist have been removed or added.

BUG: 336414
REVIEW: 118824