libs/mediacenter/multipleplaylistmodel.cpp
@@ -68,6 +68,7 @@ void MultiplePlaylistModel::createNewPlaylist(const QString& name)
     endInsertRows();
 
     m_playlistModel->setPlaylistName(name);
+    emit currentIndexChanged();
 }
 
 void MultiplePlaylistModel::setPlaylistModelAddress(QObject* model)
@@ -117,6 +118,8 @@ void MultiplePlaylistModel::removeCurrentPlaylist()
         }
     }
     endResetModel();
+
+    emit currentIndexChanged();
 }
 
 int MultiplePlaylistModel::currentIndex() const
